fix(datagrid): pagination icons size and alignment
Closes #5933

Pagination icons are misaligned because of the resize that was necessary when we used `clr-icon` but after v5, we don't longer use them.

--- a/packages/angular/projects/clr-angular/src/data/datagrid/_datagrid.clarity.scss
+++ b/packages/angular/projects/clr-angular/src/data/datagrid/_datagrid.clarity.scss
@@ -1532,7 +1532,6 @@
     .pagination-next {
       display: flex;
       align-items: center;
-      @include equilateral($clr-datagrid-icon-size);
       background-repeat: no-repeat;
       background-size: contain;
     }
